Starting work on IRA-49